@@ -187,6 +187,9 @@
     <ClCompile Include="src\AllPluginsProvider.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="plugins\src\MSYSPathPlugin.cpp">
+      <Filter>Plugins\Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="src\PathCopyCopy.def">
@@ -395,6 +398,9 @@
       <Filter>Plugins\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="plugins\prihdr\SambaPathPlugin.h">
+      <Filter>Plugins\Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="plugins\prihdr\MSYSPathPlugin.h">
       <Filter>Plugins\Header Files</Filter>
     </ClInclude>
   </ItemGroup>
