@@ -52,6 +52,8 @@
 #define IDS_WSL_PATH_PLUGIN_HINT        146
 #define IDS_SAMBA_PATH_PLUGIN_DESCRIPTION 147
 #define IDS_SAMBA_PATH_PLUGIN_HINT      148
+#define IDS_MSYS_PATH_PLUGIN_DESCRIPTION 149
+#define IDS_MSYS_PATH_PLUGIN_HINT       150
 #define IDR_PATHCOPYCOPYCONTEXTMENUEXT  201
 #define IDR_PATHCOPYCOPYDATAHANDLER     202
 #define IDR_PATHCOPYCOPYCONFIGHELPER    203
