@@ -39,6 +39,7 @@
 #include <ShortUNCPathPlugin.h>
 #include <UnixPathPlugin.h>
 #include <WSLPathPlugin.h>
+#include <MSYSPathPlugin.h>
 
 #include <algorithm>
 #include <iterator>
@@ -217,6 +218,7 @@ namespace PCC
         p_rvspPlugins.push_back(std::make_shared<Plugins::UnixPathPlugin>());
         p_rvspPlugins.push_back(std::make_shared<Plugins::CygwinPathPlugin>());
         p_rvspPlugins.push_back(std::make_shared<Plugins::WSLPathPlugin>());
+        p_rvspPlugins.push_back(std::make_shared<Plugins::MSYSPathPlugin>());
     }
 
     //
